--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@chakra-ui/react": "^2.2.4",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@nivo/core": "^0.79.0",
+    "@nivo/line": "^0.79.1",
     "framer-motion": "^6.5.1",
     "next": "12.2.3",
     "react": "18.2.0",
