--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.9.3",
     "@nivo/core": "^0.79.0",
     "@nivo/line": "^0.79.1",
+    "@nivo/pie": "^0.79.1",
     "framer-motion": "^6.5.1",
     "next": "12.2.3",
     "react": "18.2.0",
