--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nivo/bar": "^0.79.1",
     "@nivo/core": "^0.79.0",
     "@nivo/line": "^0.79.1",
+    "@nivo/marimekko": "^0.79.1",
     "@nivo/pie": "^0.79.1",
     "cors": "^2.8.5",
     "framer-motion": "^6.5.1",
