--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prod": "yarn build && yarn start"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.2.4",
