--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nivo/line": "^0.79.1",
     "@nivo/marimekko": "^0.79.1",
     "@nivo/pie": "^0.79.1",
+    "@tanstack/react-table": "^8.5.2",
     "cors": "^2.8.5",
     "framer-motion": "^6.5.1",
     "moment": "^2.29.4",
@@ -25,7 +26,8 @@
     "nextjs-cors": "^2.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "react-table": "^7.8.0"
   },
   "devDependencies": {
     "@types/node": "18.0.6",
