--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nivo/marimekko": "^0.79.1",
     "@nivo/pie": "^0.79.1",
     "@tanstack/react-table": "^8.5.2",
+    "axios": "^0.27.2",
     "cors": "^2.8.5",
     "framer-motion": "^6.5.1",
     "moment": "^2.29.4",
