--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nivo/marimekko": "^0.79.1",
     "@nivo/pie": "^0.79.1",
     "@sentry/nextjs": "^7.11.1",
+    "@sentry/tracing": "^7.11.1",
     "@tanstack/react-table": "^8.5.2",
     "axios": "^0.27.2",
     "cors": "^2.8.5",
