--- a/package.json
+++ b/package.json
@@ -35,11 +35,15 @@
     "react-table": "^7.8.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.3.0",
     "@types/node": "18.0.6",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.3",
+    "jest": "^28.1.3",
+    "jest-environment-jsdom": "^28.1.3",
     "typescript": "4.7.4"
   }
 }
