--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "framer-motion": "^6.5.1",
     "moment": "^2.29.4",
     "next": "12.2.3",
+    "next-ssl-redirect-middleware": "^0.1.4",
     "nextjs-cors": "^2.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
