--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,15 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "pages/_document.tsx", "pages/404.jsx", "src/components/global/ErrorBoundary.tsx", "pages/_error.js", "pages/404.js"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "pages/_document.tsx",
+    "pages/404.jsx",
+    "src/components/global/ErrorBoundary.tsx",
+    "pages/_error.js",
+    "pages/404.js"
+  ],
   "exclude": ["node_modules"]
 }
