--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -26,8 +26,7 @@ jobs:
             ${{ github.workflow }} workflow 
             By: ${{ github.actor }}
             Branch: ${{ github.ref_name }}
-            Commit: ${{ github.event.head_commit.message }}
-            Commit <a href="${{ github.event.head_commit.url }}">Link</a>
+            Commit: <a href="${{ github.event.head_commit.url }}">${{ github.event.head_commit.message }}</a>
 
       - name: Install dependencies
         run: |
@@ -43,6 +42,7 @@ jobs:
         with:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
+          format: html
           message: |
             ❌ Commit <a href="${{ github.event.head_commit.url }}">${{ github.event.head_commit.message }}</a> Test failed..</a>
 
@@ -52,6 +52,7 @@ jobs:
         with:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
+          format: html
           message: |
             ✅ Commit <a href="${{ github.event.head_commit.url }}">${{ github.event.head_commit.message }}</a> Test passed!</a>
 
@@ -75,22 +76,8 @@ jobs:
           disable_web_page_preview: true
           format: html
           message: |
-            <div>
-              <p>${{ github.workflow }} workflow</p>
-              <table>
-                <tr>
-                  ${{ job.status == 'success' && '✅ Build Success!' || '❌ Build Failed..' }} 
-                </tr>
-                <tr>
-                  <td>Repository Link</td>
-                  <td>Branch</td>
-                  <td>Live Site</td>
-                </tr>
-                <tr>
-                  <td><a href="${{ github.server_url }}/${{ github.repository }}"><b>${{ github.repository }}</b></a></td>
-                  <td>${{ github.ref_name }}</td>
-                  <td><a href="https://dcl-metrics.com/">dcl-metrics.com</a></td>
-                </tr>
-              </table>
-
-            </div>
+            <p>${{ github.workflow }} workflow</p>
+            <p>${{ job.status == 'success' && '✅ Build Success!' || '❌ Build Failed..' }}</p>
+            Repository Link: <a href="${{ github.server_url }}/${{ github.repository }}"><b>${{ github.repository }}</b></a><br />
+            Branch: ${{ github.ref_name }}<br />
+            Live Site: <a href="https://dcl-metrics.com/">dcl-metrics.com</a>
