--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -75,5 +75,5 @@ jobs:
           disable_web_page_preview: true
           format: html
           message: |
-            ${{ job.status == 'success' &&s '✅ Build Success!' || '❌ Build Failed..' }}
+            ${{ job.status == 'success' && '✅ Build Success!' || '❌ Build Failed..' }}
             Live Site: <a href="https://dcl-metrics.com/">dcl-metrics.com</a>
