--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -22,7 +22,7 @@ jobs:
           disable_web_page_preview: true
           format: html
           message: |
-            ⏳ ${{ github.repository }}/${{ github.ref_name }} build started
+            ⏳ <b>Build started!</b> ${{ github.repository }}/${{ github.ref_name }}
             Workflow: ${{ github.workflow }}
             By: ${{ github.actor }}
             Commit: <a href="${{ github.event.head_commit.url }}">${{ github.event.head_commit.message }}</a>
