--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "next-ssl-redirect-middleware": "^0.1.4",
     "nextjs-cors": "^2.1.1",
     "react": "18.2.0",
+    "react-countup": "^6.3.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-table": "^7.8.0"
