--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@nivo/bar": "^0.79.1",
-    "@nivo/core": "^0.79.0",
+    "@nivo/bump": "^0.80.0",
+    "@nivo/core": "^0.80.0",
     "@nivo/line": "^0.79.1",
     "@nivo/marimekko": "^0.79.1",
     "@nivo/pie": "^0.79.1",
