--- a/package.json
+++ b/package.json
@@ -45,8 +45,10 @@
     "@types/node": "18.0.6",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "@typescript-eslint/parser": "^5.39.0",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.3",
+    "eslint-plugin-chakra-ui": "^0.7.5",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
     "typescript": "4.7.4"
