--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nivo/line": "^0.79.1",
     "@nivo/marimekko": "^0.79.1",
     "@nivo/pie": "^0.79.1",
+    "@nivo/treemap": "^0.80.0",
     "@sentry/nextjs": "^7.11.1",
     "@tanstack/react-table": "^8.5.2",
     "axios": "^0.27.2",
