--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react-countup": "^6.3.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
-    "react-table": "^7.8.0"
+    "react-table": "^7.8.0",
+    "react-use-draggable-scroll": "^0.4.7"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
