--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-table": "^7.8.0",
+    "react-tile-map": "^0.3.3",
     "react-use-draggable-scroll": "^0.4.7",
     "use-debounce": "^8.0.4"
   },
