--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.39.1",
     "react-icons": "^4.4.0",
-    "react-table": "^7.8.0"
+    "react-table": "^7.8.0",
+    "react-tile-map": "^0.3.3"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
