wip: adding auth persistency

--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "@tanstack/react-table": "^8.5.2",
     "axios": "^0.27.2",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "framer-motion": "^6.5.1",
     "jotai": "^1.8.4",
     "moment": "^2.29.4",
     "moment-duration-format": "^2.3.2",
     "next": "12.2.3",
+    "next-auth": "^4.16.4",
     "next-ssl-redirect-middleware": "^0.1.4",
     "nextjs-cors": "^2.1.1",
     "react": "18.2.0",
