added date picker

--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
     "@nivo/treemap": "^0.80.0",
     "@tanstack/react-table": "^8.5.2",
     "axios": "^0.27.2",
+    "chakra-dayzed-datepicker": "^0.2.5",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
+    "date-fns": "^2.29.3",
+    "dayzed": "^3.2.3",
     "framer-motion": "^6.5.1",
     "jotai": "^1.8.4",
     "moment": "^2.29.4",
