--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,6 @@
     "src/components/global/ErrorBoundary.tsx",
     "pages/_error.js",
     "pages/404.js"
-  ],
+, "src/components/error/ErrorBoundary.jsx"  ],
   "exclude": ["node_modules"]
 }
