--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react": "18.2.0",
     "react-countup": "^6.3.1",
     "react-dom": "18.2.0",
+    "react-full-screen": "^1.1.1",
     "react-hook-form": "^7.39.1",
     "react-icons": "^4.4.0",
     "react-table": "^7.8.0",
