--- a/package.json
+++ b/package.json
@@ -37,12 +37,12 @@
     "jotai": "^1.8.4",
     "moment": "^2.29.4",
     "moment-duration-format": "^2.3.2",
-    "next": "12.2.3",
+    "next": "^13.0.7",
     "next-ssl-redirect-middleware": "^0.1.4",
     "nextjs-cors": "^2.1.1",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-countup": "^6.3.1",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-full-screen": "^1.1.1",
     "react-hook-form": "^7.39.1",
     "react-icons": "^4.4.0",
@@ -57,7 +57,7 @@
     "@types/react-dom": "18.0.6",
     "@typescript-eslint/parser": "^5.39.0",
     "eslint": "8.20.0",
-    "eslint-config-next": "12.2.3",
+    "eslint-config-next": "^13.0.7",
     "eslint-plugin-chakra-ui": "^0.7.5",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
