--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "lint": "next lint",
     "prod": "yarn build && yarn start",
     "test": "jest --coverage --silent",
-    "test:watch": "jest --watchAll",
-    "cypress": "cypress open"
+    "test:watch": "jest --watchAll"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.2.4",
