--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "react-hook-form": "^7.39.1",
     "react-icons": "^4.4.0",
     "react-table": "^7.8.0",
-    "react-tile-map": "^0.3.3"
+    "react-tile-map": "^0.3.3",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
