--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "nextjs-cors": "^2.1.1",
     "react": "^18.2.0",
     "react-countup": "^6.3.1",
+    "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-full-screen": "^1.1.1",
     "react-hook-form": "^7.39.1",
