adding mdx blog

--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
     "date-fns": "^2.29.3",
     "dayzed": "^3.2.3",
     "framer-motion": "^6.5.1",
+    "gray-matter": "^4.0.3",
     "jotai": "^1.8.4",
     "moment": "^2.29.4",
     "moment-duration-format": "^2.3.2",
     "next": "^13.0.7",
+    "next-mdx-remote": "^4.2.1",
     "next-ssl-redirect-middleware": "^0.1.4",
     "nextjs-cors": "^2.1.1",
     "react": "^18.2.0",
