wip: adding formatter on slug page

--- a/package.json
+++ b/package.json
@@ -54,6 +54,9 @@
     "react-icons": "^4.4.0",
     "react-table": "^7.8.0",
     "react-tile-map": "^0.3.3",
+    "remark-external-links": "^9.0.1",
+    "remark-gfm": "^3.0.1",
+    "remark-smartypants": "^2.0.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
