--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@chakra-ui/react": "^2.2.4",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@mdx-js/loader": "^2.2.1",
+    "@mdx-js/react": "^2.2.1",
     "@next/font": "^13.0.7",
+    "@next/mdx": "^13.1.6",
     "@nivo/bar": "^0.79.1",
     "@nivo/bump": "^0.80.0",
     "@nivo/core": "^0.80.0",
