--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "remark-external-links": "^9.0.1",
     "remark-gfm": "^3.0.1",
     "remark-smartypants": "^2.0.0",
+    "sharp": "^0.31.3",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
