online user chart axis bottom label

--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "remark-gfm": "^3.0.1",
     "remark-smartypants": "^2.0.0",
     "sharp": "^0.31.3",
+    "swr": "^2.1.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
