--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@tanstack/react-table": "^8.5.2",
     "axios": "^0.27.2",
     "chakra-dayzed-datepicker": "^0.2.5",
+    "chakra-ui-markdown-renderer": "^4.1.0",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "date-fns": "^2.29.3",
@@ -55,6 +56,8 @@
     "react-full-screen": "^1.1.1",
     "react-hook-form": "^7.39.1",
     "react-icons": "^4.4.0",
+    "react-markdown": "^8.0.6",
+    "react-syntax-highlighter": "^15.5.0",
     "react-table": "^7.8.0",
     "react-tile-map": "^0.3.3",
     "remark-external-links": "^9.0.1",
