--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "lint:fix": "next lint --fix",
     "prod": "yarn build && yarn start",
     "test": "jest --coverage --silent",
     "test:watch": "jest --watchAll",
@@ -78,6 +79,7 @@
     "eslint": "8.20.0",
     "eslint-config-next": "^13.0.7",
     "eslint-plugin-chakra-ui": "^0.7.5",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
     "typescript": "4.7.4"
