--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "dcl-stats",
   "version": "0.1.0",
+  "engines": {
+    "node": "18.x"
+  },
   "private": true,
   "cacheDirectories": [
     ".next/cache"
