--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -1,9 +1,9 @@
 name: Deploy Staging
 on:
   push:
-    branches: [development]
+    branches: [dev]
   pull_request:
-    branches: [development]
+    branches: [dev]
 
 jobs:
   build:
