--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint:fix": "next lint --fix",
     "prod": "yarn build && yarn start",
     "test": "jest --coverage --silent",
-    "test:watch": "jest --watchAll",
+    "test:watch": "jest --watch",
     "test:e2e": "cypress run --headless"
   },
   "dependencies": {
@@ -75,6 +75,7 @@
     "@types/node": "18.0.6",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "@types/testing-library__jest-dom": "^5.14.5",
     "@typescript-eslint/parser": "^5.39.0",
     "cypress": "^12.2.0",
     "eslint": "8.20.0",
