--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
     "jest-fetch-mock": "^3.0.3",
+    "resize-observer-polyfill": "^1.5.1",
     "typescript": "4.7.4"
   }
 }
