--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "prod": "yarn build && yarn start",
     "test": "jest --verbose",
     "test:watch": "jest --verbose --watch",
-    "test:e2e": "cypress run --headless"
+    "test:e2e": "cypress run --headless",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@apollo/client": "^3.7.4",
@@ -87,6 +88,7 @@
     "jest-environment-jsdom": "^28.1.3",
     "jest-fetch-mock": "^3.0.3",
     "resize-observer-polyfill": "^1.5.1",
-    "typescript": "4.7.4"
+    "typescript": "4.7.4",
+    "husky": "^8.0.0"
   }
 }
