--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
     "jest-environment-jsdom": "^28.1.3",
     "jest-fetch-mock": "^3.0.3",
     "resize-observer-polyfill": "^1.5.1",
-    "typescript": "4.7.4",
+    "typescript": "^4.9.5",
     "husky": "^8.0.0"
   }
 }
