--- a/package.json
+++ b/package.json
@@ -79,16 +79,16 @@
     "@types/react-dom": "18.0.6",
     "@types/testing-library__jest-dom": "^5.14.5",
     "@typescript-eslint/parser": "^5.39.0",
-    "cypress": "^12.2.0",
+    "cypress": "^12.11.0",
     "eslint": "8.20.0",
     "eslint-config-next": "^13.0.7",
     "eslint-plugin-chakra-ui": "^0.7.5",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "husky": "^8.0.0",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
     "jest-fetch-mock": "^3.0.3",
     "resize-observer-polyfill": "^1.5.1",
-    "typescript": "^4.9.5",
-    "husky": "^8.0.0"
+    "typescript": "^4.9.5"
   }
 }
