--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:e2e": "cypress run --headless",
+    "cypress": "cypress open",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -79,7 +80,6 @@
     "@types/react-dom": "18.0.6",
     "@types/testing-library__jest-dom": "^5.14.5",
     "@typescript-eslint/parser": "^5.39.0",
-    "cypress": "^12.11.0",
     "eslint": "8.20.0",
     "eslint-config-next": "^13.0.7",
     "eslint-plugin-chakra-ui": "^0.7.5",
