--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@testing-library/cypress": "^9.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/react-hooks": "^8.0.1",
@@ -80,6 +81,7 @@
     "@types/react-dom": "18.0.6",
     "@types/testing-library__jest-dom": "^5.14.5",
     "@typescript-eslint/parser": "^5.39.0",
+    "cypress": "^12.11.0",
     "eslint": "8.20.0",
     "eslint-config-next": "^13.0.7",
     "eslint-plugin-chakra-ui": "^0.7.5",
