jest test log & e2e added on CI

--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -45,7 +45,8 @@ jobs:
           yarn install
       - name: Run test
         run: |
-          yarn test
+          yarn test --verbose
+          yarn test:e2e
 
   deploy:
     runs-on: ubuntu-latest
