--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -43,7 +43,8 @@ jobs:
 
       - name: Run test
         run: |
-          yarn test
+          yarn test --verbose
+          yarn test:e2e
 
       - name: Send Test Fail message
         if: failure()
