run server for running cypress on gh action

--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -43,6 +43,11 @@ jobs:
       - name: Install dependencies
         run: |
           yarn install
+
+      - name: Start server
+        run: |
+          yarn dev & sleep 10
+
       - name: Run test
         run: |
           yarn test --verbose
