--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -49,17 +49,13 @@ jobs:
           yarn dev & sleep 10
 
       - name: Run test
-        run: |
-          yarn test --verbose
-          yarn test:e2e
         env:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
           TELEGRAM_TO: ${{ secrets.TELEGRAM_TO }}
-          # Send a notification if the tests fail
-          if: ${{ failure() }}
-          run: |
-            curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage -d chat_id=${TELEGRAM_TO} -d text="❌ Test failure in ${{ github.workflow }} on ${{ github.repository }}/${{ github.ref_name }} by ${{ github.actor }}"
-
+        run: |
+          yarn test --verbose
+          yarn test:e2e
+          if [ $? -eq 1 ]; then curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage -d chat_id=${TELEGRAM_TO} -d text="❌ Test failure in ${{ github.workflow }} on ${{ github.repository }}/${{ github.ref_name }} by ${{ github.actor }}"; fi
   deploy:
     runs-on: ubuntu-latest
     needs: [build]
