--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,8 +3,9 @@
   "parser": "@typescript-eslint/parser",
   "plugins": ["chakra-ui"],
   "rules": {
-    "chakra-ui/props-order": "error",
+    "chakra-ui/props-order": "warn",
     "chakra-ui/props-shorthand": "error",
-    "chakra-ui/require-specific-component": "error"
+    "chakra-ui/require-specific-component": "error",
+    "no-unused-vars": "warn"
   }
 }
