--- a/package.json
+++ b/package.json
@@ -63,6 +63,8 @@
     "react-hook-form": "^7.39.1",
     "react-icons": "^4.4.0",
     "react-markdown": "^8.0.6",
+    "react-spring": "^9.7.3",
+    "react-spring-carousel": "^2.0.19",
     "react-syntax-highlighter": "^15.5.0",
     "react-table": "^7.8.0",
     "react-tile-map": "^0.3.3",
