--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@apollo/client": "^3.7.4",
     "@chakra-ui/react": "^2.2.4",
+    "@dnd-kit/core": "^6.1.0",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mdx-js/loader": "^2.2.1",
@@ -38,6 +39,8 @@
     "axios": "^0.27.2",
     "chakra-dayzed-datepicker": "^0.2.5",
     "chakra-ui-markdown-renderer": "^4.1.0",
+    "chart.js": "^4.4.2",
+    "chartjs-plugin-streaming": "^2.0.0",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "date-fns": "^2.29.3",
@@ -55,6 +58,7 @@
     "next-ssl-redirect-middleware": "^0.1.4",
     "nextjs-cors": "^2.1.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-countup": "^6.3.1",
     "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
@@ -62,6 +66,7 @@
     "react-hook-form": "^7.39.1",
     "react-icons": "^4.4.0",
     "react-markdown": "^8.0.6",
+    "react-rnd": "^10.4.1",
     "react-spring": "^9.7.3",
     "react-spring-carousel": "^2.0.19",
     "react-syntax-highlighter": "^15.5.0",
@@ -73,6 +78,7 @@
     "remark-smartypants": "^2.0.0",
     "sharp": "^0.31.3",
     "swr": "^2.1.0",
+    "use-draggable": "^1.5.2",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
