--- a/.env.template
+++ b/.env.template
@@ -16,7 +16,7 @@ NEXT_PUBLIC_STAGING=''
 # Optional for cacheing heavy payload response locally
 # CACHE_RESPONSE='false'
 
-NEXT_PUBLIC_TELEMETRY='false'
-NEXT_PUBLIC_ALLOW_PRIVACY='false'
-NEXT_PUBLIC_INSPECTOR='true'
-
+# Optional client side bool variables
+NEXT_PUBLIC_TELEMETRY=''
+NEXT_PUBLIC_ALLOW_PRIVACY=''
+NEXT_PUBLIC_INSPECTOR=''
