changed env var naming scheme

--- a/.env.template
+++ b/.env.template
@@ -18,5 +18,5 @@ NEXT_PUBLIC_STAGING=''
 
 # Optional client side bool variables
 NEXT_PUBLIC_TELEMETRY=''
-NEXT_PUBLIC_ALLOW_PRIVACY=''
+NEXT_PUBLIC_ALLOW_USER=''
 NEXT_PUBLIC_INSPECTOR=''
