adding skeleton tile component

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "graphql": "^16.6.0",
     "gray-matter": "^4.0.3",
     "jotai": "^1.8.4",
+    "leaflet": "^1.9.4",
     "moment-duration-format": "^2.3.2",
     "next": "^14.1.3",
     "next-mdx-remote": "^4.2.1",
@@ -64,6 +65,7 @@
     "react-full-screen": "^1.1.1",
     "react-hook-form": "^7.39.1",
     "react-icons": "^4.4.0",
+    "react-leaflet": "^4.2.1",
     "react-markdown": "^8.0.6",
     "react-rnd": "^10.4.1",
     "react-spring": "^9.7.3",
@@ -86,6 +88,7 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^14.4.3",
+    "@types/leaflet": "^1.9.12",
     "@types/node": "18.0.6",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
