--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-countup": "^6.3.1",
+    "react-d3-speedometer": "^2.2.1",
     "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-full-screen": "^1.1.1",
