--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -28,46 +28,46 @@ jobs:
             By: ${{ github.actor }}
             Commit: <a href="${{ github.event.head_commit.url }}">${{ github.event.head_commit.message }}</a>
 
-      - name: actions/cache@v3
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.npm
-            ${{ github.workspace }}/.next/cache
-          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
-          restore-keys: |
-            ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-
+      #- name: actions/cache@v3
+      #  uses: actions/cache@v3
+      #  with:
+      #    path: |
+      #      ~/.npm
+      #      ${{ github.workspace }}/.next/cache
+      #    key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
+      #    restore-keys: |
+      #      ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-
 
-      - name: Install dependencies
-        run: |
-          yarn install
+      #- name: Install dependencies
+      #  run: |
+      #    yarn install
 
-      - name: Run test
-        env:
-          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
-          TELEGRAM_TO: ${{ secrets.TELEGRAM_TO }}
-        run: |
-          yarn test --verbose
-          if [ $? -eq 1 ]; then curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage -d chat_id=${TELEGRAM_TO} -d text="❌ Test failure in ${{ github.workflow }} on ${{ github.repository }}/${{ github.ref_name }} by ${{ github.actor }}"; fi
-  deploy:
-    runs-on: ubuntu-latest
-    needs: [build]
-    steps:
-      - uses: actions/checkout@v3
-      - uses: akhileshns/heroku-deploy@v3.12.12
-        with:
-          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "dcl-metrics-fe-stage"
-          heroku_email: "jongwoo.park@code.berlin"
+      #- name: Run test
+      #  env:
+      #    TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
+      #    TELEGRAM_TO: ${{ secrets.TELEGRAM_TO }}
+      #  run: |
+      #    yarn test --verbose
+      #    if [ $? -eq 1 ]; then curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage -d chat_id=${TELEGRAM_TO} -d text="❌ Test failure in ${{ github.workflow }} on ${{ github.repository }}/${{ github.ref_name }} by ${{ github.actor }}"; fi
+  #deploy:
+  #  runs-on: ubuntu-latest
+  #  needs: [build]
+  #  steps:
+  #    - uses: actions/checkout@v3
+  #    - uses: akhileshns/heroku-deploy@v3.12.12
+  #      with:
+  #        heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+  #        heroku_app_name: "dcl-metrics-fe-stage"
+  #        heroku_email: "jongwoo.park@code.berlin"
 
-      - name: Finish build notfication
-        uses: appleboy/telegram-action@master
-        if: always()
-        with:
-          to: ${{ secrets.TELEGRAM_TO }}
-          token: ${{ secrets.TELEGRAM_TOKEN }}
-          disable_web_page_preview: true
-          format: html
-          message: |
-            ${{ job.status == 'success' && '✅ Dev Build Success!' || '❌ Dev Build Failed..' }}
-            Live Site: <a href="https://dcl-metrics-fe-stage.herokuapp.com/">dcl-metrics-fe-stage.herokuapp.com</a>
+  #    - name: Finish build notfication
+  #      uses: appleboy/telegram-action@master
+  #      if: always()
+  #      with:
+  #        to: ${{ secrets.TELEGRAM_TO }}
+  #        token: ${{ secrets.TELEGRAM_TOKEN }}
+  #        disable_web_page_preview: true
+  #        format: html
+  #        message: |
+  #          ${{ job.status == 'success' && '✅ Dev Build Success!' || '❌ Dev Build Failed..' }}
+  #          Live Site: <a href="https://dcl-metrics-fe-stage.herokuapp.com/">dcl-metrics-fe-stage.herokuapp.com</a>
