--- a/package.json
+++ b/package.json
@@ -56,8 +56,7 @@
     "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-full-screen": "^1.1.1",
-    "react-gesture-responder": "^2.1.0",
-    "react-grid-dnd": "^2.1.2",
+    "react-grid-layout": "^1.5.0",
     "react-hook-form": "^7.39.1",
     "react-icons": "^4.4.0",
     "react-markdown": "^8.0.6",
