--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nivo/bar": "^0.79.1",
     "@nivo/core": "^0.80.0",
     "@tanstack/react-table": "^8.5.2",
+    "airtable": "^0.12.2",
     "axios": "^0.27.2",
     "chakra-dayzed-datepicker": "^0.2.5",
     "chakra-ui-markdown-renderer": "^4.1.0",
