--- a/.github/workflows/open-pr.yaml
+++ b/.github/workflows/open-pr.yaml
@@ -1,20 +1,20 @@
-name: Notification On Pull Request Open
-on:
-  pull_request:
-    types: [opened, reopened]
+#name: Notification On Pull Request Open
+#on:
+#  pull_request:
+#    types: [opened, reopened]
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Pull Request Open
-        uses: appleboy/telegram-action@master
-        with:
-          to: ${{ secrets.TELEGRAM_TO }}
-          token: ${{ secrets.TELEGRAM_TOKEN }}
-          disable_web_page_preview: true
-          format: html
-          message: |
-            <b>Pull Request</b> ${{ github.repository }}/${{ github.ref_name }}
-            Url : ${{ github.event.pull_request.html_url }}
-            Author: ${{ github.actor }}
+#jobs:
+#  build:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Pull Request Open
+#        uses: appleboy/telegram-action@master
+#        with:
+#          to: ${{ secrets.TELEGRAM_TO }}
+#          token: ${{ secrets.TELEGRAM_TOKEN }}
+#          disable_web_page_preview: true
+#          format: html
+#          message: |
+#            <b>Pull Request</b> ${{ github.repository }}/${{ github.ref_name }}
+#            Url : ${{ github.event.pull_request.html_url }}
+#            Author: ${{ github.actor }}
